Fix product exception